<resources>
    <string name="app_name">Calculator</string>
    <string name="C">C</string>
    <string name="m">(</string>
    <string name="d">)</string>
    <string name="chia">÷</string>
    <string name="nhan">x</string>
    <string name="cong">+</string>
    <string name="tru">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seve">7</string>
    <string name="eig">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>



</resources>